examples/test/testpolicy14128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14128
  namespace: namespace172
spec:
  podSelector:
    matchLabels:
      key27: value5
      key16: value4
      key38: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value25
          key8: value1
          key4: value40
      podSelector:
        matchLabels:
          key22: value21
          key9: value16
